[tool.poetry]
name = "open3d-experiments"
version = "0.1.0"
description = ""
authors = ["David Zhang <zdavid0123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
open3d = "^0.17.0"
scikit-learn = "^1.3.2"
pyyaml = "^6.0.1"
addict = "^2.4.0"
pillow = "^10.1.0"
pandas = "^2.1.2"
tqdm = "^4.66.1"
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
